solution and test scripts

--- a/Chapter12.ipynb
+++ b/Chapter12.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def test(did_pass):\n",
+    "    \"\"\"  Print the result of a test.  \"\"\"\n",
+    "    linenum = sys._getframe(1).f_lineno   # Get the caller's line number.\n",
+    "    if did_pass:\n",
+    "        msg = \"Test at line {0} ok.\".format(linenum)\n",
+    "    else:\n",
+    "        msg = (\"Test at line {0} FAILED.\".format(linenum))\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -1572,13 +1592,365 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#4 Create a module named mymodule1.py. Add attributes myage set to your current age, and year set to the current year. Create another module named mymodule2.py. Add attributes myage set to 0, and year set to the year you were born. Now create a file named namespace_test.py. Import both of the modules above and write the following statement:\n",
+    "\n",
+    "print( (mymodule2.myage - mymodule1.myage) ==\n",
+    "       (mymodule2.year - mymodule1.year)  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6 What does Tim Peters have to say about namespaces\n",
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#7 Give the Python interpreter’s response to each of the following from a continuous interpreter session:\n",
+    ">>> s = \"If we took the bones out, it wouldn't be crunchy, would it?\"\n",
+    ">>> s.split()\n",
+    ">>> type(s.split())\n",
+    ">>> s.split(\"o\")\n",
+    ">>> s.split(\"i\")\n",
+    ">>> \"0\".join(s.split(\"o\"))\n",
+    "Be sure you understand why you get each result. Then apply what you have learned to fill in the body of the function below using the split and join methods of str objects:\n",
+    " \n",
+    "def myreplace(old, new, s):\n",
+    "    \"\"\" Replace all occurrences of old with new in s. \"\"\"\n",
+    "    ...\n",
+    "\n",
+    "\n",
+    "test(myreplace(\",\", \";\", \"this, that, and some other thing\") ==\n",
+    "                         \"this; that; and some other thing\")\n",
+    "test(myreplace(\" \", \"**\",\n",
+    "                 \"Words will now      be  separated by stars.\") ==\n",
+    "                 \"Words**will**now**be**separated**by**stars.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"If we took the bones out, it wouldn't be crunchy, would it?\"\n",
+    "s.split()\n",
+    "\n",
+    "type(s.split())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['If we t',\n",
+       " '',\n",
+       " 'k the b',\n",
+       " 'nes ',\n",
+       " 'ut, it w',\n",
+       " \"uldn't be crunchy, w\",\n",
+       " 'uld it?']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.split(\"o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['If we took the bones out, ', \"t wouldn't be crunchy, would \", 't?']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.split(\"i\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"If we t00k the b0nes 0ut, it w0uldn't be crunchy, w0uld it?\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"0\".join(s.split(\"o\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test at line 10 ok.\n",
+      "Test at line 13 ok.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myreplace(old, new, s):\n",
+    "    \"\"\" Replace all occurrences of old with new in s. \"\"\"\n",
+    "    if old == \" \":\n",
+    "        return new.join(s.split())\n",
+    "    else:\n",
+    "        return new.join(s.split(old))\n",
+    "\n",
+    "\n",
+    "test(myreplace(\",\", \";\", \"this, that, and some other thing\") ==\n",
+    "                         \"this; that; and some other thing\")\n",
+    "test(myreplace(\" \", \"**\",\n",
+    "                 \"Words will now      be  separated by stars.\") ==\n",
+    "                 \"Words**will**now**be**separated**by**stars.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#8 Create a module named wordtools.py with our test scaffolding in place.\n",
+    "Now add functions to these tests pass:\n",
+    "test(cleanword(\"what?\") == \"what\")\n",
+    "test(cleanword(\"'now!'\") == \"now\")\n",
+    "test(cleanword(\"?+='w-o-r-d!,@$()'\") ==  \"word\")\n",
+    "\n",
+    "test(has_dashdash(\"distance--but\"))\n",
+    "test(not has_dashdash(\"several\"))\n",
+    "test(has_dashdash(\"spoke--\"))\n",
+    "test(has_dashdash(\"distance--but\"))\n",
+    "test(not has_dashdash(\"-yo-yo-\"))\n",
+    "\n",
+    "test(extract_words(\"Now is the time!  'Now', is the time? Yes, now.\") ==\n",
+    "      ['now','is','the','time','now','is','the','time','yes','now'])\n",
+    "test(extract_words(\"she tried to curtsey as she spoke--fancy\") ==\n",
+    "      ['she','tried','to','curtsey','as','she','spoke','fancy'])\n",
+    "\n",
+    "test(wordcount(\"now\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 2)\n",
+    "test(wordcount(\"is\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"the\",\"is\"]) == 3)\n",
+    "test(wordcount(\"time\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 1)\n",
+    "test(wordcount(\"frog\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 0)\n",
+    "\n",
+    "test(wordset([\"now\", \"is\", \"time\", \"is\", \"now\", \"is\", \"is\"]) ==\n",
+    "      [\"is\", \"now\", \"time\"])\n",
+    "test(wordset([\"I\", \"a\", \"a\", \"is\", \"a\", \"is\", \"I\", \"am\"]) ==\n",
+    "      [\"I\", \"a\", \"am\", \"is\"])\n",
+    "test(wordset([\"or\", \"a\", \"am\", \"is\", \"are\", \"be\", \"but\", \"am\"]) ==\n",
+    "      [\"a\", \"am\", \"are\", \"be\", \"but\", \"is\", \"or\"])\n",
+    "\n",
+    "test(longestword([\"a\", \"apple\", \"pear\", \"grape\"]) == 5)\n",
+    "test(longestword([\"a\", \"am\", \"I\", \"be\"]) == 2)\n",
+    "test(longestword([\"this\",\"supercalifragilisticexpialidocious\"]) == 34)\n",
+    "test(longestword([ ]) == 0)\n",
+    "Save this module so you can use the tools it contains in future programs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Created on Fri May  5 17:42:45 2017\n",
+    "\n",
+    "@author: nevil_000\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "Create a module named wordtools.py with our test scaffolding in place.\n",
+    "Now add functions to these tests pass:\n",
+    "test(cleanword(\"what?\") == \"what\")\n",
+    "test(cleanword(\"'now!'\") == \"now\")\n",
+    "test(cleanword(\"?+='w-o-r-d!,@$()'\") ==  \"word\")\n",
+    "\n",
+    "test(has_dashdash(\"distance--but\"))\n",
+    "test(not has_dashdash(\"several\"))\n",
+    "test(has_dashdash(\"spoke--\"))\n",
+    "test(has_dashdash(\"distance--but\"))\n",
+    "test(not has_dashdash(\"-yo-yo-\"))\n",
+    "\n",
+    "test(extract_words(\"Now is the time!  'Now', is the time? Yes, now.\") ==\n",
+    "      ['now','is','the','time','now','is','the','time','yes','now'])\n",
+    "test(extract_words(\"she tried to curtsey as she spoke--fancy\") ==\n",
+    "      ['she','tried','to','curtsey','as','she','spoke','fancy'])\n",
+    "\n",
+    "test(wordcount(\"now\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 2)\n",
+    "test(wordcount(\"is\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"the\",\"is\"]) == 3)\n",
+    "test(wordcount(\"time\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 1)\n",
+    "test(wordcount(\"frog\", [\"now\",\"is\",\"time\",\"is\",\"now\",\"is\",\"is\"]) == 0)\n",
+    "\n",
+    "test(wordset([\"now\", \"is\", \"time\", \"is\", \"now\", \"is\", \"is\"]) ==\n",
+    "      [\"is\", \"now\", \"time\"])\n",
+    "test(wordset([\"I\", \"a\", \"a\", \"is\", \"a\", \"is\", \"I\", \"am\"]) ==\n",
+    "      [\"I\", \"a\", \"am\", \"is\"])\n",
+    "test(wordset([\"or\", \"a\", \"am\", \"is\", \"are\", \"be\", \"but\", \"am\"]) ==\n",
+    "      [\"a\", \"am\", \"are\", \"be\", \"but\", \"is\", \"or\"])\n",
+    "\n",
+    "test(longestword([\"a\", \"apple\", \"pear\", \"grape\"]) == 5)\n",
+    "test(longestword([\"a\", \"am\", \"I\", \"be\"]) == 2)\n",
+    "test(longestword([\"this\",\"supercalifragilisticexpialidocious\"]) == 34)\n",
+    "test(longestword([ ]) == 0)\n",
+    "Save this module so you can use the tools it contains in future programs.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "def test(did_pass):\n",
+    "    \"\"\"  Print the result of a test.  \"\"\"\n",
+    "    linenum = sys._getframe(1).f_lineno   # Get the caller's line number.\n",
+    "    if did_pass:\n",
+    "        msg = \"Test at line {0} ok.\".format(linenum)\n",
+    "    else:\n",
+    "        msg = (\"Test at line {0} FAILED.\".format(linenum))\n",
+    "    print(msg)\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "\n",
+    "def cleanword(word):\n",
+    "    j = []\n",
+    "    for i in list(word):\n",
+    "        if i not in string.punctuation:\n",
+    "            j.append(i)\n",
+    "    return \"\".join(j)\n",
+    "\n",
+    "test(cleanword(\"what?\") == \"what\")\n",
+    "test(cleanword(\"'now!'\") == \"now\")\n",
+    "test(cleanword(\"?+='w-o-r-d!,@$()'\") ==  \"word\")\n",
+    "\n",
+    "\n",
+    "def has_dashdash(word):\n",
+    "    if '--' in word:\n",
+    "        return True\n",
+    "        \n",
+    "\n",
+    "def extract_words(word):\n",
+    "    if has_dashdash(word):\n",
+    "        temp_text = cleanword(word.replace('--',' '))\n",
+    "    else:\n",
+    "        temp_text = cleanword(word.lower())    \n",
+    "        \n",
+    "    return temp_text.split()\n",
+    "    \n",
+    "\n",
+    "def wordcount(sub, word):\n",
+    "    counter = 0\n",
+    "    for i in word:\n",
+    "        if sub in i:\n",
+    "            counter += 1\n",
+    "    return counter\n",
+    "    \n",
+    "\n",
+    "def wordset(word_list):\n",
+    "    temp_text = list(set(word_list))\n",
+    "    temp_text.sort()\n",
+    "    return temp_text\n",
+    "\n",
+    "def longestword(word_list):\n",
+    "    length_word = 0\n",
+    "    for i in word_list:\n",
+    "        if len(i) > length_word:\n",
+    "            length_word = len(i)\n",
+    "    return length_word\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -1597,7 +1969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
